Fixed a map overflow issue. Fixed a username display issue. Changed login status detection to use user id instead of username

--- a/csc309teamproject/src/components/layout/Layout.css
+++ b/csc309teamproject/src/components/layout/Layout.css
@@ -1,7 +1,7 @@
 .AccountBar{
   border: 5px solid powderblue;
   margin-top: 5px;
-  margin-right: 30px;
+  margin-right: 60px;
   display: block;
   background: #FFF;
   font-size: 150%;
@@ -26,4 +26,8 @@
   margin-left: 10px;
   margin-bottom: 10px;
   float: left;
+}
+
+header nav.navbar {
+  height: 99px;
 }
